--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   },
   "homepage": "https://github.com/davidgoldcode/slackdoodle#readme",
   "dependencies": {
-    "axios": "^0.21.1",
-    "dotenv": "^8.2.0"
+    "@slack/bolt": "^3.0.0",
+    "dotenv": "^8.2.0",
+    "ngrok": "^3.4.0"
   }
 }
