--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/davidgoldcode/slackdoodle#readme",
   "dependencies": {
     "@slack/bolt": "^3.0.0",
+    "cloudinary": "^1.23.0",
     "dotenv": "^8.2.0",
     "ngrok": "^3.4.0"
   }
